src/snapshots/soliton__cli__tests__cli_get_valid_content_matches_snapshots@changing-context.snap
---
source: src/cli.rs
expression: contents
input_file: examples/valid/changing-context
---
a: "a\n"
with: "this with normal context: [object]\n\n"
