src/snapshots/soliton__cli__tests__cli_get_valid_content_matches_snapshots@media-types.snap
---
source: src/cli.rs
expression: contents
input_file: examples/valid/media-types
---
cannot-become-html: ""
echo-target-media-type: text/html
html-variation: ""
nesting/html-that-includes-txt: "Error: Unable to render content. Rendering failed for template: Error rendering \"nesting/html-that-includes-txt\" line 1, col 1: The `get` helper's first argument must be a string (the address of the content item to get). Error rendering \"nesting/html-that-includes-txt\" line 1, col 1: The `get` helper's first argument must be a string (the address of the content item to get). "
nesting/just-html: "<marquee>wowowow</marquee>\n"
nesting/txt-that-includes-html: "Error: Unable to render content. Rendering failed for template: Error rendering \"nesting/txt-that-includes-html\" line 1, col 1: The `get` helper's first argument must be a string (the address of the content item to get). Error rendering \"nesting/txt-that-includes-html\" line 1, col 1: The `get` helper's first argument must be a string (the address of the content item to get). "
template-cannot-become-html: ""
template-html-variation: ""
