src/snapshots/soliton__cli__tests__cli_get_valid_content_matches_snapshots@static-content.snap
---
source: src/cli.rs
expression: contents
input_file: examples/valid/static-content
---
index: "<h1>title</h1><p>content</p>\n"
