src/snapshots/soliton__cli__tests__cli_get_valid_content_matches_snapshots@template-that-is-executable.snap
---
source: src/cli.rs
expression: contents
input_file: examples/invalid/template-that-is-executable
---
this-file-is-executable: "Error: Unable to load content. Content file name is not supported: The content file 'this-file-is-executable.html.hbs' appears to be a handlebars file (because it ends in '.hbs'), but it is also executable. It must be one or the other. "
