src/snapshots/soliton__cli__tests__cli_get_valid_content_matches_snapshots@three-extensions-executable.snap
---
source: src/cli.rs
expression: contents
input_file: examples/invalid/three-extensions-executable
---
this-file-is-executable: "Error: Unable to load content. Content file name is not supported: Content file name 'this-file-is-executable.txt.html.jpg' has too many extensions. "
