src/snapshots/soliton__cli__tests__examples_match_snapshots@changing-context.snap
---
source: src/cli.rs
expression: contents
input_file: src/examples/changing-context
---
a: "a\n"
with: "this with normal context: [object]\n\n"
