src/snapshots/soliton__cli__tests__examples_match_snapshots@executables.snap
---
source: src/cli.rs
expression: contents
input_file: examples/valid/executables
---
cat: ""
count-cli-args: "0\n"
error: "Error: Unable to render content. Executable '$PROJECT_DIRECTORY/examples/valid/executables/error.txt.sh' with working directory '$PROJECT_DIRECTORY/examples/valid/executables' exited with code 1: boom!\n"
ls: "cat.txt.sh\ncount-cli-args.txt.sh\nerror.txt.sh\nls.txt.sh\npwd.txt.sh\nsubdirectory\nsystem-info-SKIP-SNAPSHOT.html.sh\ntemplate.txt.hbs\n"
pwd: "$PROJECT_DIRECTORY/examples/valid/executables\n"
subdirectory/pwd: "$PROJECT_DIRECTORY/examples/valid/executables/subdirectory\n"
template: "this is pwd from subdirectory:\n$PROJECT_DIRECTORY/examples/valid/executables/subdirectory\n"
